[tool.poetry]
name = "advent-of-code-python-user"
version = "0.1.0"
description = ""
authors = ["Fredrik Fornwall <fredrik@fornwall.net>"]

[tool.poetry.dependencies]
python = "^3.9"
advent-of-code = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
isort = "*"
black = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
